test/corpus/basics.txt
==================
Core syntax
==================

x = 42
price = .5
ready = Yes
missing = EMP
show("Hello {x}")
wait 0.5

---

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (number)))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (number)))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (boolean)))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (emp)))
  (expression_statement
    (call_expression
      function: (identifier)
      (argument_list
        (string))))
  (wait_statement
    duration: (number)))

==================
For uses in
==================

for name in names {
  show(name)
}

---

(source_file
  (for_statement
    variable: (identifier)
    iterable: (identifier)
    (block
      (expression_statement
        (call_expression
          function: (identifier)
          (argument_list
            (identifier)))))))
