test/corpus/expressions.txt
==================
Expressions
==================

items = [10, "hello", Yes, 3.14]
items[0]
items[1:4]
person = {"name": "Rick", "age": 18}
person.name
a = 10 + 5 * 2

---

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (array
        (number)
        (string)
        (boolean)
        (number))))
  (expression_statement
    (subscript_expression
      object: (identifier)
      index: (number)))
  (expression_statement
    (subscript_expression
      object: (identifier)
      index: (slice_expression
        (number)
        (number))))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (board
        (board_entry
          (board_key
            (string))
          (string))
        (board_entry
          (board_key
            (string))
          (number)))))
  (expression_statement
    (member_expression
      object: (identifier)
      property: (identifier)))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (binary_expression
        (number)
        (binary_expression
          (number)
          (number))))))
