test/corpus/groups.txt
==================
Groups
==================

group Person {
  name
  job introduce() {
    show("I'm {self.name}")
  }
}

group Student from Person {
  age
  job introduce() {
    show("Age: {self.age}")
  }
}

member = Student("Bob", 17)
member.introduce()

---

(source_file
  (group_declaration
    name: (identifier)
    body: (group_body
      (field_declaration
        name: (identifier))
      (job_declaration
        name: (identifier)
        body: (block
          (expression_statement
            (call_expression
              function: (identifier)
              (argument_list
                (string))))))))
  (group_declaration
    name: (identifier)
    parent: (identifier)
    body: (group_body
      (field_declaration
        name: (identifier))
      (job_declaration
        name: (identifier)
        body: (block
          (expression_statement
            (call_expression
              function: (identifier)
              (argument_list
                (string))))))))
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (call_expression
        function: (identifier)
        (argument_list
          (string)
          (number)))))
  (expression_statement
    (call_expression
      function: (member_expression
        object: (identifier)
        property: (identifier)))))
